# Socket-Chat

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.yml
src/client/: main.cpp
src/server/: Server.cpp  Server.h  main.cpp
src/util/: YamlConfig.cpp  YamlConfig.h
